// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PledgeInfo matches snapshot with 1 pledge 1`] = `
<div class="pledge-info card-content">
  <div class="flex items-center justify-center mb-8"><button class="button font-semibold is-medium is-primary is-rounded w-333px">

    </button></div>
  <div class="grid mb-8">
    <pledgeinfocard-stub pledges="[object Object]" program="[object Object]" class="mr-0 ml-0"></pledgeinfocard-stub>
  </div>
</div>
`;

exports[`PledgeInfo matches snapshot with multiple pledges 1`] = `
<div class="pledge-info card-content">
  <div class="flex items-center justify-center mb-8"><button class="button font-semibold is-medium is-primary is-rounded w-333px">

    </button></div>
  <div class="grid mb-8">
    <pledgeinfocard-stub pledges="[object Object]" program="[object Object]" class="mr-auto ml-auto"></pledgeinfocard-stub>
    <pledgeinfocard-stub pledges="[object Object]" program="[object Object]" class="mr-auto ml-auto"></pledgeinfocard-stub>
  </div>
</div>
`;
